<resources>
    <string name="app_name">Simple Bank Manager</string>
    <!-- LogInFragment -->
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="log_in">log in</string>
    <string name="welcome_username">Welcome %1$s</string>
    <!-- UserMenuFragment -->
    <string name="view_balance">view balance</string>
    <string name="transfer_funds">transfer funds</string>
    <string name="calculate_exchange">calculate exchange</string>
    <string name="pay_bills">pay bills</string>
    <!-- ViewBalanceFragment -->
    <string name="balance_headline">Balance:</string>
    <string name="balance_key">balance</string>
    <!-- TransferFundsFragment -->
    <string name="account_number">Account number</string>
    <string name="name">Name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="transfer">transfer</string>
    <string name="account_number_error">Invalid account number</string>
    <string name="current_balance_amount">$%1$s</string>
    <!-- CalculateExchangeFragment -->
    <string name="convert_from">convert from</string>
    <string name="convert_to">convert to</string>
    <string name="calculate">calculate</string>
    <string name="exchange_display_text">%1$s%2$s = %3$s%4$s</string>
    <string name="same_currency_toast">Cannot convert to same currency</string>
    <string-array name="currencies">
        <item>EUR</item>
        <item>GBP</item>
        <item>USD</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_bill_info">Show bill info</string>
    <string name="enter_code">Enter code</string>
    <string name="exchange_map_key">exchangeMap</string>
    <string name="bill_info_key">billInfo</string>
    <string name="error">Error</string>
    <string name="wrong_code">Wrong code</string>
    <string name="ok">Ok</string>
    <string name="bill_info">Bill info</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="bill_info_msg">Name: %1$s\nBillCode: %2$s\nAmount: $%3$s</string>
    <string name="payment_success_msg">Payment for bill %1$s, was successful</string>
    <string name="not_enough_funds">Not enough funds</string>
</resources>
