<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/userMenuWelcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginStart="@dimen/margin_med"
        android:layout_marginEnd="@dimen/margin_med"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>

    <Button
        android:id="@+id/userMenuViewBalanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_balance"
        android:layout_marginStart="@dimen/margin_med"
        android:layout_marginEnd="@dimen/margin_med"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>

    <Button
        android:id="@+id/userMenuTransferFundsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/transfer_funds"
        android:layout_marginStart="@dimen/margin_med"
        android:layout_marginEnd="@dimen/margin_med"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>

    <Button
        android:id="@+id/userMenuExchangeCalculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_exchange"
        android:layout_marginStart="@dimen/margin_med"
        android:layout_marginEnd="@dimen/margin_med"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>

    <Button
        android:id="@+id/userMenuPayBillsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_bills"
        android:layout_marginStart="@dimen/margin_med"
        android:layout_marginEnd="@dimen/margin_med"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginBottom="@dimen/margin_small"/>
</LinearLayout>