<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CalculateExchangeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/calculateExchangeLabelFromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/convert_from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/calculateExchangeLabelToTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_med"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/convert_to"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateExchangeLabelFromTextView" />

        <Spinner
            android:id="@+id/calculateExchangeFromSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:entries="@array/currencies"
            app:layout_constraintStart_toEndOf="@+id/calculateExchangeLabelFromTextView"
            app:layout_constraintTop_toTopOf="@+id/calculateExchangeLabelFromTextView" />

        <Spinner
            android:id="@+id/calculateExchangeToSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/currencies"
            app:layout_constraintStart_toStartOf="@+id/calculateExchangeFromSpinner"
            app:layout_constraintTop_toTopOf="@+id/calculateExchangeLabelToTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/calculateExchangeDisplayTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/calculateExchangeAmountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calculateExchangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/calculate" />


</LinearLayout>